# srip-application-screen

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  SCORING.md  SRIP_ATS_PRD_v3.md  SRIP_Application_Filter_PRD.md  WEBSITE_ASKS.md  config.yaml  openissue.md  pyproject.toml
.claude/: launch.json
api/: __init__.py  admin_api.py  auth.py  cohorts.py  demo.py  jobs.py  main.py  registry.py  schemas.py  web.py  webhook_auth.py  webhooks.py
api/static/css/: app.css
api/static/js/: audit.js  cohort.js  common.js  dashboard.js  upload.js
api/templates/: audit.html  base.html  cohort.html  dashboard.html  login.html  upload.html
db/migrations/: 001_init.sql
resources/: profanity.txt  schools.json
resources/demo/: sample_applications.csv
scripts/: replay.py
src/srip_filter/: __init__.py  cohort.py  config.py  db.py  ingest.py  ingest_webhook.py  models.py  outputs.py  pipeline.py  resume_extract.py  resume_fetch.py  worker.py
src/srip_filter/gates/: __init__.py  (+2 more)
tests/: test_cohort.py  test_config.py  test_db.py  test_ingest.py  test_ingest_webhook.py  test_models.py  test_outputs.py  test_pipeline.py  test_pipeline_v3.py  test_replay.py  test_resume_extract.py  test_resume_fetch.py  test_smoke.py  test_worker.py
tests/api/: conftest.py  test_admin_api.py  test_api.py  test_auth.py  test_cohorts.py  test_download.py  test_promote.py  test_status.py  test_upload.py  test_web.py  test_webhook.py
tests/gates/: test_essays.py  test_gpa.py
tests/llm/: test_client.py
tests/scoring/: test_aggregate.py  test_coursework.py  test_essays.py  test_resume.py  test_school.py  test_technical_essay.py
(+17 files in other folders)
